syntax = "proto3";

package net.praqma.tracey.protocol.eiffel.events;

import "models.proto";

message EiffelSourceChangeSubmittedEvent {
    models.Meta meta = 1;
    repeated models.Link links = 2;
    EiffelSourceChangeSubmittedEventData data = 3;

    message EiffelSourceChangeSubmittedEventData {
        Submitter submitter = 1;
        oneof identifier {
            models.Data.GitIdentifier gitIdentifier = 100;
        }
    }

    message Submitter {
        string name = 1;
        string email = 2;
        string id = 3;
        string organisation = 4;
    }
}